# EFS_content_delivery

./: .env.exemple  README.md  docker-compose.local.yml  docker-compose.test.yml  pyproject.toml
src/api/: Dockerfile  entrypoint.sh  main.py
src/api/cache/: __init__.py  abstract.py  redis.py
src/api/core/: config.py  utils.py
src/api/db/: __init__.py  abstract.py  elastic.py  redis.py
src/api/db/cache/: __init__.py  abstract.py  redis.py
src/api/endpoints/v1/: films.py  genres.py  persons.py
src/api/models/api/v1/: film.py  person.py
src/api/models/db/: film.py  genre.py  person.py
src/api/services/: base.py  film.py  genre.py  person.py
tests/: entrypoint.sh
tests/functional/: conftest.py  settings.py
tests/functional/fixtures/: connections.py  db_operations.py
tests/functional/src/: test_film.py  test_genre.py  test_person.py
tests/functional/testdata/: es_data.py  es_mapping.py  films_data.py  persons_data.py
tests/functional/utils/: wait_for_es.py  wait_for_redis.py
